<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <modules>
        <module>flush-logs</module>
    </modules>

    <parent>
        <groupId>eu.europeana</groupId>
        <artifactId>europeana-parent-pom</artifactId>
        <version>2.4</version>
    </parent>

    <groupId>eu.europeana.api</groupId>
    <artifactId>api-tools</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <repositories>
        <repository>
            <id>libs-release-local</id>
            <name>europeana-releases</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-release</url>
        </repository>
        <repository>
            <id>libs-snapshots-local</id>
            <name>europeana-snapshots</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-snapshot</url>
        </repository>
        <!-- repo for plugins, required to resolve git-commit-id -->
        <repository>
            <id>plugins-release</id>
            <name>artifactory plugins-release</name>
            <url>https://artifactory.eanadev.org/artifactory/plugins-release</url>
        </repository>
    </repositories>


    <name>API Tools</name>
    <description>Project for API Tools</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <spring-boot.version>2.5.5</spring-boot.version>
        <git-commit-id.version>5.0.0</git-commit-id.version>
        <springdoc.version>1.6.13</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- Import dependency management from Spring Boot (because we don't use Spring-Boot as parent pom)-->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>